accessible/base/TextLeafRange.h
@@ -228,6 +228,9 @@ class TextLeafPoint final {
                                      bool aIncludeOrigin,
                                      bool aIgnoreListItemMarker = false) const;
 
+  TextLeafPoint FindClusterSameAcc(nsDirection aDirection,
+                                   bool aIncludeOrigin) const;
+
   bool IsInSpellingError() const;
 
   /**
